# emaredatabase

./: CHANGELOG.md  CONTRIBUTING.md  COPILOT_SESSION_HAFIZA.md  DERVISHIN_CEYIZI.md  DOSYA_YAPISI.md  EMAREDATABASE_HAFIZA.md  EMARE_ANAYASA.md  Makefile  QUICKSTART_DEV.md  README.md  deploy.json  emareoracle_hafiza.md  pyproject.toml  setup.sh  start.sh
.github/: copilot-instructions.md
include/: zeusdb.h
src/: __init__.py  btree.c  executor.c  pager.c  parser.c  table.c  tokenizer.c  txn.c  wal.c
tests/: __init__.py  test_ceyiz.py  test_main.py
web_dizayn/: emaredatabase_style.html
