[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emaredatabase"
version = "0.1.0"
description = "Emare veritabanı yönetim kütüphanesi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
